# FindNumber

./: CHANGELOG.md  FindNumber.cabal  findNumber.cabal
app/: Main.hs
src/: Lib.hs
